# medium

./: LICENSE  README.md
dataframe-chatbot/: .gitignore
dataframe-chatbot/notebooks/: Demo.ipynb
dataframe-chatbot/src/ai/: agent_tools.py  pandas_ml_assistant.py
dataframe-chatbot/src/api/app/: main.py  shared_state.py
dataframe-chatbot/src/api/app/routers/: chat.py
dataframe-chatbot/src/api/schemas/: __init__.py  chat.py
dataframe_chatbot/: README.md  open_webui_pipe.py  pyproject.toml
dataframe_chatbot/notebooks/: Demo.ipynb
dataframe_chatbot/src/: logger.py  variables.py
dataframe_chatbot/src/ai/: agent_tools.py  autodf_ml_assistant.py  pandas_ml_assistant.py
dataframe_chatbot/src/api/app/: shared_state.py
dataframe_chatbot/src/api/app/routers/: chat.py  health.py
dataframe_chatbot/src/api/config/: app.py
gpt-oss-vllm-rag/: .gitignore  README.md  pyproject.toml
gpt-oss-vllm-rag/data/: main.tex
gpt-oss-vllm-rag/notebooks/: Demo.ipynb
gpt-oss-vllm-rag/src/: logger.py  utils.py  variables.py
gpt-oss-vllm-rag/src/ai/: assistant.py
gpt-oss-vllm-rag/src/ai/rag/: data.py  retriever.py
