[project]
name = "dataframe-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Davit Martirosyan",email = "dvmartirosyan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "langgraph (==0.3.20)",
    "pandas (==2.2.3)",
    "langchain (==0.3.21)",
    "langchain-ollama (==0.2.3)",
    "langgraph-checkpoint-sqlite (==2.0.6)",
    "aiosqlite (==0.21.0)",
    "ollama (==0.5.2)",
    "fastapi[standard] (==0.115.12)",
    "scikit-learn (==1.7.1)",
    "langchain-experimental (==0.3.4)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
notebook = "7.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
